<resources>
    <string name="app_name">Calc</string>
    <string name="btnZero">0</string>
    <string name="btnDot">.</string>
    <string name="btResult">=</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <string name="btnAdd">+</string>
    <string name="btnDel">⌫</string>
    <string name="btnMin">-</string>
    <string name="btnMul">×</string>
    <string name="btnDiv">÷</string>
    <string name="tvNumber"> </string>
    <string name="tvCalculator">CALCULATOR</string>
    <string name="btnPercentage">%</string>
    <string name="btnClr">C</string>
    <string name="btn_Zero">00</string>
    <string name="tvAns"> </string>
</resources>