<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCalculator"
        android:text="@string/tvCalculator"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="right"
        android:padding="20dp"
        android:text="@string/tvNumber"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/tlCalculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCalculator" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tlCalculator"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <TableRow
            android:id="@+id/trRow1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="1dp">


            <Button
                android:id="@+id/btnPercentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:backgroundTint="@color/grey1"
                android:fontFamily="sans-serif-black"
                android:hint="@string/btnPercentage"
                android:paddingVertical="20dp"
                android:textColorHint="@color/black"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnClr"
                android:layout_marginHorizontal="2dp"
                android:fontFamily="sans-serif-black"
                android:paddingVertical="20dp"
                android:hint="@string/btnClr"
                style="?android:attr/buttonBarButtonStyle"
                android:backgroundTint="@color/grey1"
                android:textSize="30sp"
                android:textColorHint="@color/black" />


            <Button
                android:id="@+id/btnDel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:backgroundTint="@color/grey1"
                android:hint="@string/btnDel"
                android:paddingVertical="20dp"
                android:textColorHint="@color/black"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:backgroundTint="@color/yellow"
                android:fontFamily="sans-serif-black"
                android:hint="@string/btnDiv"
                style="?android:attr/buttonBarButtonStyle"
                android:paddingVertical="20dp"
                android:textColorHint="@color/white"
                android:textSize="30sp" />

        </TableRow>
        <TableRow
            android:id="@+id/trRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSeven"
                android:paddingVertical="20dp"
                style="?android:attr/buttonBarButtonStyle"
                android:hint="@string/btnSeven"
                android:backgroundTint="@color/grey"
                android:textSize="30sp"
                android:layout_marginHorizontal="2dp"
                android:textColorHint="@color/white" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnEight"
                android:paddingVertical="20dp"
                style="?android:attr/buttonBarButtonStyle"
                android:hint="@string/btnEight"
                android:backgroundTint="@color/grey"
                android:textSize="30sp"
                android:layout_marginHorizontal="2dp"
                android:textColorHint="@color/white" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNine"
                android:paddingVertical="20dp"
                android:hint="@string/btnNine"
                style="?android:attr/buttonBarButtonStyle"
                android:backgroundTint="@color/grey"
                android:textSize="30sp"
                android:layout_marginHorizontal="2dp"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:backgroundTint="@color/yellow"
                android:fontFamily="sans-serif-black"
                android:hint="@string/btnMul"
                android:paddingVertical="20dp"
                android:textColorHint="@color/white"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="30sp" />

        </TableRow>



        <TableRow
            android:id="@+id/trRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnFour"
                android:paddingVertical="20dp"
                style="?android:attr/buttonBarButtonStyle"
                android:hint="@string/btnFour"
                android:backgroundTint="@color/grey"
                android:layout_marginHorizontal="2dp"
                android:textSize="30sp"
                android:textColorHint="@color/white" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnFive"
                android:paddingVertical="20dp"
                android:layout_marginHorizontal="2dp"
                android:hint="@string/btnFive"
                android:backgroundTint="@color/grey"
                android:textSize="30sp"
                android:textColorHint="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSix"
                android:paddingVertical="20dp"
                android:hint="@string/btnSix"
                android:backgroundTint="@color/grey"
                android:textSize="30sp"
                android:textColorHint="@color/white"
                android:layout_marginHorizontal="2dp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:backgroundTint="@color/yellow"
                style="?android:attr/buttonBarButtonStyle"
                android:fontFamily="sans-serif-black"
                android:hint="@string/btnMin"
                android:paddingVertical="20dp"
                android:textColorHint="@color/white"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/trRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnOne"
                android:layout_marginHorizontal="2dp"
                android:paddingVertical="20dp"
                android:hint="@string/btnOne"
                style="?android:attr/buttonBarButtonStyle"
                android:backgroundTint="@color/grey"
                android:textSize="30sp"
                android:textColorHint="@color/white" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnTwo"
                android:paddingVertical="20dp"
                android:layout_marginHorizontal="2dp"
                android:hint="@string/btnTwo"
                android:backgroundTint="@color/grey"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="30sp"
                android:textColorHint="@color/white" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnThree"
                android:paddingVertical="20dp"
                android:layout_marginHorizontal="2dp"
                android:hint="@string/btnThree"
                android:backgroundTint="@color/grey"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="30sp"
                android:textColorHint="@color/white" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAdd"
                android:paddingVertical="20dp"
                android:hint="@string/btnAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginHorizontal="2dp"
                android:backgroundTint="@color/yellow"
                android:textSize="30sp"
                android:textColorHint="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:id="@+id/trRow5"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp">

            <Button
                android:id="@+id/btn2Zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:backgroundTint="@color/grey"
                android:hint="@string/btn_Zero"
                android:paddingVertical="20dp"
                android:textColorHint="@color/white"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnZero"
                android:paddingVertical="20dp"
                android:layout_marginHorizontal="2dp"
                android:hint="@string/btnZero"
                style="?android:attr/buttonBarButtonStyle"
                android:backgroundTint="@color/grey"
                android:textSize="30sp"
                android:textColorHint="@color/white" />
            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:layout_marginHorizontal="2dp"
                android:hint="@string/btnDot"
                android:paddingVertical="20dp"
                android:textColorHint="@color/white"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btnResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:backgroundTint="@color/yellow"
                android:hint="@string/btResult"
                android:paddingVertical="20dp"
                android:textColorHint="@color/white"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>